# elements-template-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
.github/workflows/: build.yml
mingw-compat/: condition_variable  future  mutex  thread
src/: DistrhoPluginInfo.h  DistrhoPluginInfoBase.h  PluginDSP.cpp  PluginUI.cpp  generate-plugin-dsp.sh  korg35lpf.dsp
src/faustpp-template/: DistrhoPluginInfoBase.h
